@@ -1,4 +1,4 @@
 #Ibator build version info
-#Thu Feb 19 17:02:37 CST 2009
+#Mon Feb 23 14:36:25 CST 2009
 version=1.2.2
-buildNum=711
+buildNum=714
