@@ -40,6 +40,12 @@ here</a>.</p>
     <th>Description</th>
   </tr>
   <tr>
+    <td valign="top"><code>(package).CaseInsensitiveLikePlugin</code></td>
+    <td>This plugin adds methods to the Example class (actually to the Criteria innser class)
+        to support case insensitive LIKE searches.  This demonstrates adding functionality to
+        the example classes via a plugin, rather than extending the class.</td>
+  </tr>
+  <tr>
     <td valign="top"><code>(package).EqualsHashCodePlugin</code></td>
     <td>This plugin adds <code>equals</code> and <code>hashCode</code> methods to the
         Java model objects generated by Ibator.
