@@ -27,12 +27,12 @@
 <h3>Enhancements</h3>
 <ul>
   <li>IBATIS-569 - Modified the IbatorRules implementation to make it easier
-      for plugins to provide custom implementations of IbatorRules.  See the 
+      for plugins to provide custom implementations of IbatorRules.  See the
       Javadoc for the new class
       <code>org.apache.ibatis.ibator.internal.rules.IbatorRulesDelegate</code>
       for more information.</li>
   <li>IBATIS-571 - Added support for automatically delimiting SQL keywords
-      if they are used as column names in tables.  See the 
+      if they are used as column names in tables.  See the
       <a href="configreference/ibatorContext.html">&lt;ibatorContext&gt;</a> page
       for more information.</li>
   <li>IBATIS-577 - Define SQL fragments for column lists to improve
@@ -44,6 +44,10 @@
       for more information.</li>
   <li>Added logging statements for use in debug. See the
      <a href="reference/logging.html">Logging</a> page
+      for more information.</li>
+  <li>Added new example plugin to demonstrate adding case insensitive LIKE
+      support to generated Example classes. See the
+     <a href="configreference/ibatorPlugin.html">&lt;ibatorPlugin&gt;</a> page
       for more information.</li>
 </ul>
 
